Fix position of button in login screen to align perfectly with textfields

--- a/app/stylesheets/partials/_hibou.scss
+++ b/app/stylesheets/partials/_hibou.scss
@@ -450,8 +450,8 @@
   /* box */
 
   #box {
-    width: 500px;
-    margin: 200px auto;
+    width: 600px;
+    margin: 100px auto;
 
     .block {
       margin-bottom: 20px;
@@ -475,21 +475,19 @@
 
           label {
             float: left;
-            width: 25%;
+            width: 30%;
             text-align: right;
           }
 
           input {
-            float: right;
-            width: 65%;
-            margin-right: 5%;
+            float: left;
+            width: 55%;
+            margin-left: 5%;
           }
         }
 
         &.buttons li {
-          float: right;
-          width: 65%;
-          margin: 0 5% 0 0;
+          margin-left: 35%;
 
           input {
             float: left;
